Se arreglaron un poco los estilos

--- a/views/admin/administrador/vista.html
+++ b/views/admin/administrador/vista.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>ADMIN/VISTA</title>
   </head>
   <body>
@@ -14,7 +16,7 @@
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="../panel-admin.html"> <img src="../../img/iconos/grid-three-up-3x.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label class="h4"="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -38,23 +40,23 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="nombre">Nombre de usuario:</label>
+          <label class="h4" for="nombre">Nombre de usuario:</label class="h4">
           <input type="text" class="form-control-plaintext" id="username" placeholder="Usuario" data-type="usuario" readonly>
         </div>
         <div class="form-group">
-          <label for="name">Nombre(s):</label>
+          <label class="h4" for="name">Nombre(s):</label class="h4">
           <input type="text" class="form-control-plaintext" id="name" placeholder="Nombre(s)" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="last_name">Apellido(s):</label>
+          <label class="h4" for="last_name">Apellido(s):</label class="h4">
           <input type="text" class="form-control-plaintext" id="last_name" placeholder="Apellido(s)" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="email">Email:</label>
+          <label class="h4" for="email">Email:</label class="h4">
           <input type="email" class="form-control-plaintext" id="email" placeholder="Email" data-type="correo" readonly>
         </div>
         <div class="form-group">
-          <label for="phone">Telefono:</label>
+          <label class="h4" for="phone">Telefono:</label class="h4">
           <input type="email" class="form-control-plaintext" id="phone" placeholder="Telefono" data-type="numero" readonly>
         </div>
       </form>
