--- a/views/admin/evento/vista.html
+++ b/views/admin/evento/vista.html
@@ -16,7 +16,7 @@
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label class="h4"="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -40,19 +40,19 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="client">Cliente: <span class="req">*</span></label>
+          <label class="h4" for="client">Cliente: </label class="h4">
           <input type="text" class="form-control-plaintext" id="client" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="dateStart">Fecha Inicio: <span class="req">*</span></label>
+          <label class="h4" for="dateStart">Fecha Inicio: </label class="h4">
           <input type="date" class="form-control-plaintext" id="dateStart" data-type="fecha" readonly>
         </div>
         <div class="form-group">
-          <label for="dateEnd">Fecha Fin: <span class="req">*</span></label>
+          <label class="h4" for="dateEnd">Fecha Fin: </label class="h4">
           <input type="date" class="form-control-plaintext" id="dateEnd" data-type="fecha" readonly>
         </div>
         <div class="form-group">
-          <label for="persons">Numero de Personas: <span class="req">*</span></label>
+          <label class="h4" for="persons">Numero de Personas: </label class="h4">
           <input type="number" class="form-control-plaintext" id="persons" data-type="numero" readonly>
         </div>
       </form>
