--- a/views/admin/administrador/index.html
+++ b/views/admin/administrador/index.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>ADMINISTRADORES</title>
   </head>
   <body>
@@ -75,6 +77,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- Optional JavaScript -->
+    <script src="../../../js/alertify.min.js" type="text/javascript"></script>
     <script src="../../../js/views/admin/administrador/index.js" type="text/javascript"></script>
   </body>
 </html>
