--- a/views/admin/clientes/vista.html
+++ b/views/admin/clientes/vista.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../css/alertify.css">
+    <link rel="stylesheet" href="../../../css/themes/default.css">
     <title>CLIENTES/VISTA</title>
   </head>
   <body>
@@ -14,7 +16,7 @@
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label class="h4"="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -39,27 +41,27 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="email">Email: <span class="req">*</span></label>
+          <label class="h4" for="email">Email: </label class="h4">
           <input type="email" class="form-control-plaintext" id="email" placeholder="fernando@gmail.com" data-type="correo" readonly>
         </div>
         <div class="form-group">
-          <label for="nombre">Nombre(s): <span class="req">*</span></label>
+          <label class="h4" for="nombre">Nombre(s): </label class="h4">
           <input type="text" class="form-control-plaintext" id="name" placeholder="Fernando" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="ap-paterno">Apellido(s): <span class="req">*</span></label>
+          <label class="h4" for="ap-paterno">Apellido(s): </label class="h4">
           <input type="text" class="form-control-plaintext" id="last_name" placeholder="Mayorga" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="tel-cel">Tel. Celular: <span class="req">*</span></label>
+          <label class="h4" for="tel-cel">Tel. Celular: </label class="h4">
           <input type="text" class="form-control-plaintext" id="phone" placeholder="3398787646" data-type="numero" readonly>
         </div>
         <div class="form-group">
-          <label for="tel-fijo">Puntuación: <span class="req">*</span></label>
+          <label class="h4" for="tel-fijo">Puntuación: </label class="h4">
           <input type="number" class="form-control-plaintext" id="score" placeholder="0" data-type="numero" readonly>
         </div>
         <div class="form-group">
-          <label for="tel-cel">Comentario: <span class="req">*</span></label>
+          <label class="h4" for="tel-cel">Comentario: </label class="h4">
           <input type="text" class="form-control-plaintext" id="comment" placeholder="Comentario del cliente" data-type="nombre" readonly>
         </div>
       </form>
