--- a/views/admin/paquetes/vista.html
+++ b/views/admin/paquetes/vista.html
@@ -16,7 +16,7 @@
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label class="h4"="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -40,11 +40,11 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="name">Nombre: <span class="req">*</span></label>
+          <label class="h4" for="name">Nombre: </label class="h4">
           <input type="datetime-local" class="form-control-plaintext" id="name" placeholder="nombre del paquete" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="description">Descripcion: <span class="req">*</span></label>
+          <label class="h4" for="description">Descripcion: </label class="h4">
           <input type="datetime-local" class="form-control-plaintext" id="description" placeholder="Descripcion" data-type="curriculum" readonly>
         </div>
       </form>
