--- a/views/admin/proveedores/vista.html
+++ b/views/admin/proveedores/vista.html
@@ -16,7 +16,7 @@
     <br><br>
       <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label class="h4"="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -40,27 +40,27 @@
     <section class="container">
       <form>
         <div class="form-group">
-          <label for="name">Nombre: <span class="req">*</span></label>
+          <label class="h4" for="name">Nombre: </label class="h4">
           <input type="text" class="form-control-plaintext" id="name" placeholder="Fernando" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="last_name">Apellido: <span class="req">*</span></label>
+          <label class="h4" for="last_name">Apellido: </label class="h4">
           <input type="text" class="form-control-plaintext" id="last_name" placeholder="Mayorga" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="ocupation">Ocupación: <span class="req">*</span></label>
+          <label class="h4" for="ocupation">Ocupación: </label class="h4">
           <input type="text" class="form-control-plaintext" id="ocupation" placeholder="Luz y Sonido" data-type="nombre" readonly>
         </div>
         <div class="form-group">
-          <label for="email">Email: <span class="req">*</span></label>
+          <label class="h4" for="email">Email: </label class="h4">
           <input type="email" class="form-control-plaintext" id="email" placeholder="fernando@gmail.com" data-type="correo" readonly>
         </div>
         <div class="form-group">
-          <label for="phone">Telefono: <span class="req">*</span></label>
+          <label class="h4" for="phone">Telefono: </label class="h4">
           <input type="number" class="form-control-plaintext" id="phone" placeholder="3398787646" data-type="numero" readonly>
         </div>
         <div class="form-group">
-          <label for="comment">Comentario: <span class="req">*</span></label>
+          <label class="h4" for="comment">Comentario: </label class="h4">
           <input type="text" class="form-control-plaintext" id="comment" placeholder="36297665" data-type="curriculum" readonly>
         </div>
       </form>
