--- a/views/admin/calendario/index.html
+++ b/views/admin/calendario/index.html
@@ -12,24 +12,21 @@
   <body>
 
     <br><br>
-        <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-          <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="../../panel-admin.html">Regresar a panel</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../../index.html">Cerrar Sesión</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+              <a class="nav-link" href="../../index.html">Regresar a Terraza Don Leon</a>
+          </li>
+        </ul>
+        <div id="sesion"></div>
+      </div>
+    </nav>
     <br>
 
     <h1 class="display-4 text-center">Calendario</h1>
@@ -96,5 +93,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <script src="../../../js/js.cookie.js" type="text/javascript"></script>
+    <script src="../../../js/sesion-sub.js" type="text/javascript"></script>
   </body>
 </html>
