--- a/views/admin/paquetes/crear.html
+++ b/views/admin/paquetes/crear.html
@@ -14,23 +14,21 @@
   <body>
 
     <br><br>
-      <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg  navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="../../panel-admin.html"> <img src="../../../img/iconos/grid-three-up-3x.png" alt=""> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="../../panel-admin.html">Regresar a panel</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../../index.html">Cerrar Sesión</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+              <a class="nav-link" href="../../index.html">Regresar a Terraza Don Leon</a>
+          </li>
+        </ul>
+        <div id="sesion"></div>
+      </div>
+    </nav>
     <br>
 
     <h1 class="display-4 text-center">Crear Paquete</h1>
@@ -63,6 +61,8 @@
     <script src="../../../js/alertify.min.js" type="text/javascript"></script>
     <script src="../../../js/md5.min.js" type="text/javascript"></script>
     <script src="../../../js/validation.js" type="text/javascript"></script>
+    <script src="../../../js/js.cookie.js" type="text/javascript"></script>
+    <script src="../../../js/sesion-sub.js" type="text/javascript"></script>
     <script src="../../../js/views/admin/paquetes/crear.js" type="text/javascript"></script>
   </body>
 </html>
