--- a/views/calendario.html
+++ b/views/calendario.html
@@ -11,84 +11,7 @@
 
     <link href='../fullcalendar/fullcalendar.min.css' rel='stylesheet' />
     <link href='../fullcalendar/fullcalendar.print.min.css' rel='stylesheet' media='print' />
-    <script src='../fullcalendar/lib/jquery.min.js'></script>
-    <script src='../fullcalendar/lib/moment.min.js'></script>
-    <script src='../fullcalendar/fullcalendar.min.js'></script>
-    <script>
 
-      $(document).ready(function() {
-
-        $('#calendar').fullCalendar({
-          header: {
-            left: 'prev,next today',
-            center: 'title',
-            right: 'month,agendaWeek,agendaDay,listWeek'
-          },
-          defaultDate: '2018-03-12',
-          navLinks: true, // can click day/week names to navigate views
-          editable: true,
-          eventLimit: true, // allow "more" link when too many events
-          events: [
-            {
-              title: 'All Day Event',
-              start: '2018-03-01',
-            },
-            {
-              title: 'Long Event',
-              start: '2018-03-07',
-              end: '2018-03-10'
-            },
-            {
-              id: 999,
-              title: 'Repeating Event',
-              start: '2018-03-09T16:00:00'
-            },
-            {
-              id: 999,
-              title: 'Repeating Event',
-              start: '2018-03-16T16:00:00'
-            },
-            {
-              title: 'Conference',
-              start: '2018-03-11',
-              end: '2018-03-13'
-            },
-            {
-              title: 'Meeting',
-              start: '2018-03-12T10:30:00',
-              end: '2018-03-12T12:30:00'
-            },
-            {
-              title: 'Lunch',
-              start: '2018-03-12T12:00:00'
-            },
-            {
-              title: 'Meeting',
-              start: '2018-03-12T14:30:00'
-            },
-            {
-              title: 'Happy Hour',
-              start: '2018-03-12T17:30:00'
-            },
-            {
-              title: 'Dinner',
-              start: '2018-03-12T20:00:00'
-            },
-            {
-              title: 'Birthday Party',
-              start: '2018-03-13T07:00:00'
-            },
-            {
-              title: 'Click for Google',
-              url: 'http://google.com/',
-              start: '2018-03-28'
-            }
-          ]
-        });
-
-      });
-
-    </script>
     <style>
 
       body {
@@ -132,9 +55,10 @@
               <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./iniciar-sesion.html">Iniciar Sesión</a>
+              <a class="nav-link" id="login" href="./iniciar-sesion.html">Iniciar Sesión</a>
             </li>
           </ul>
+          <div id="sesion"></div>
         </div>
       </nav>
     <br>
@@ -144,9 +68,18 @@
     <div id="calendar"></div>
 
     <!-- Optional JavaScript -->
+    <script src="../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
+
+    <script src='../fullcalendar/lib/jquery.min.js'></script>
+    <script src='../fullcalendar/lib/moment.min.js'></script>
+    <script src='../fullcalendar/fullcalendar.min.js'></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
+
+    <script src="../js/js.cookie.js" type="text/javascript"></script>
+    <script src="../js/sesion.js" type="text/javascript"></script>
+    <script src="../js/views/calendario.js" type="text/javascript"></script>
   </body>
 </html>
