--- a/views/iniciar-sesion.html
+++ b/views/iniciar-sesion.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/alertify.css">
+    <link rel="stylesheet" href="../css/themes/default.css">
     <title>INICIAR SESIÓN</title>
   </head>
   <body>
@@ -36,9 +38,10 @@
               <a class="nav-link" href="./contacto.html">Contacto</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./iniciar-sesion.html">Iniciar Sesión</a>
+              <a class="nav-link" id="login" href="./iniciar-sesion.html">Iniciar Sesión</a>
             </li>
           </ul>
+          <div id="sesion"></div>
         </div>
       </nav>
 
@@ -49,36 +52,36 @@
     <section class="container">
       <br>
       <h3> Llena los siguientes datos.</h2>
-      <form action="/panel-admin" method="get" novalidate>
+      <form novalidate>
 
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="basic-addon1">Usuario&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</span>
-          </div>
-          <input type="text" class="form-control" id="login-usuario" placeholder="fernandomayorga"  data-type="username" required>
+        <div class="form-group">
+          <label for="nombre">Nombre de usuario: <span class="req">*</span></label>
+          <input type="text" class="form-control" id="username" placeholder="Usuario" data-type="usuario">
         </div>
-
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="login-contrasena">Contraseña</span>
-          </div>
-          <input type="password" class="form-control" placeholder="***********" data-type="password" required>
+        <div class="form-group">
+          <label for="ap-paterno">Contraseña: <span class="req">*</span></label>
+          <input type="password" class="form-control" id="password" placeholder="******" data-type="contrasena">
         </div>
 
         <br>
-        <button type="submit" class="btn btn-primary" id="btn-login">Iniciar Sesión</button>
+        <button type="button" id="submit" class="btn btn-primary">Iniciar Sesión</button>
       </form>
 
     </section>
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <!-- Optional JavaScript -->
-    <script src="./js/validation.js" type="text/javascript"></script>
+    <script src="../js/alertify.min.js" type="text/javascript"></script>
+    <script src="../js/md5.min.js" type="text/javascript"></script>
+    <script src="../js/validation.js" type="text/javascript"></script>
+    <script src="../js/js.cookie.js" type="text/javascript"></script>
+    <script src="../js/views/iniciar-sesion.js" type="text/javascript"></script>
+    <script src="../js/sesion.js" type="text/javascript"></script>
 
   </body>
 </html>
