--- a/views/promociones.html
+++ b/views/promociones.html
@@ -48,55 +48,7 @@
     <h1 class="display-4 text-center">Promociones</h1>
     <br>
     <br>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <div class="card" style="width: 16rem;">
-              <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
-              <div class="card-body">
-                <h5 class="card-title">Promo Mi Boda</h5>
-                <p class="card-text">
-                  50 Mesas <br>
-                  400 Sillas <br>
-                  400 Platillos <br>
-                  400 Postres
-                </p>
-                <a href="#" class="btn btn-success">$20,000</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 16rem;">
-              <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
-              <div class="card-body">
-                <h5 class="card-title">Promo Mi Boda</h5>
-                <p class="card-text">
-                  50 Mesas <br>
-                  400 Sillas <br>
-                  400 Platillos <br>
-                  400 Postres
-                </p>
-                <a href="#" class="btn btn-success">$20,000</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm">
-            <div class="card" style="width: 16rem;">
-              <img class="card-img-top" src="../img/panel-admin/administradores.png" alt="administradores">
-              <div class="card-body">
-                <h5 class="card-title">Promo Mi Boda</h5>
-                <p class="card-text">
-                  50 Mesas <br>
-                  400 Sillas <br>
-                  400 Platillos <br>
-                  400 Postres
-                </p>
-                <a href="#" class="btn btn-success">$20,000</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div id="promociones" class="container"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -106,5 +58,6 @@
 
     <script src="../js/js.cookie.js" type="text/javascript"></script>
     <script src="../js/sesion.js" type="text/javascript"></script>
+    <script src="../js/views/promociones.js" type="text/javascript"></script>
   </body>
 </html>
