--- a/views/calendario.html
+++ b/views/calendario.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/alertify.css">
     <title>CALENDARIO</title>
 
     <link href='../fullcalendar/fullcalendar.min.css' rel='stylesheet' />
@@ -71,6 +72,7 @@
     <script src="../js/vendor/jquery-3.3.1.min.js" type="text/javascript"></script>
 
     <script src='../fullcalendar/lib/jquery.min.js'></script>
+    <script src="../js/alertify.min.js" type="text/javascript"></script>
     <script src='../fullcalendar/lib/moment.min.js'></script>
     <script src='../fullcalendar/fullcalendar.min.js'></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
