Se agregó información real al index (nosotros, historia)

--- a/views/index.html
+++ b/views/index.html
@@ -103,7 +103,7 @@
   <section class="container">
     <h2 class="display-4 text-center">Nosotros</h1>
     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+      Terraza de don León está conformado por un gran equipo de personal capacitado e interesado en el bienestar y entretenimiento de sus clientes, buscando ofrecer el mejor lugar para la relajación, entretenimiento, deporte y convivio, comprometidos con cumplir sus sueños y llevar a cabo el mejor evento de su vida.
     </p>
   </section>
 
@@ -112,7 +112,7 @@
     <section class="container">
       <h2 class="display-4 text-center">Historia</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque dictum massa non magna mollis, in euismod sapien condimentum. Fusce volutpat eu dolor vel dignissim. Vestibulum imperdiet sem dui, quis posuere urna facilisis non. Etiam ultricies rhoncus pretium. Donec tempus non sapien at cursus. Nam feugiat purus eu libero mattis pellentesque. Maecenas interdum, urna sit amet condimentum cursus, odio nulla eleifend quam, a dapibus tortor nibh non massa.
+        Terraza de don León surge con la finalidad de proporcionar un lugar agradable y privado para realizar todo tipo de eventos, en vista de que por la zona no hay un lugar que cuente con las instalaciones que nosotros proporcionamos, se decidió ofrecer éste cómodo lugar para realizar desde eventos familiares hasta grandes fiestas.
       </p>
     </section>
 
